<resources>
    <string name="app_name">MatchFutbol</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_vacio">vacio</string>
    <string name="title_equipos">Equipos</string>
    <string name="title_clasificacion">Clasificación</string>
    <string name="title_resultados">Resultados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="google_button_description">Botón de inicio de sesión con Google</string>
    <string name="log_out">LOG OUT</string>
    <string name="register">REGISTER</string>
    <string name="repeat_password">Repeat Password</string>

</resources>